# payment-system

./: .gitignore  README.md  payment-system-docker-compose.yml
.github/workflow/: build_customer_service.yml
bank-service/: pom.xml
bank-service/bank-api/: pom.xml
bank-service/bank-core/: pom.xml
bank-service/bank-service-app/: HELP.md  pom.xml
bank-service/bank-service-app/docker/: compose.yaml
common/: pom.xml
core/: docker-compose-core.yml  pom.xml  runInfrastructure.sh
core/bank-api/: pom.xml
core/bank-core/: pom.xml
core/core-app/: pom.xml
core/top-up/: pom.xml
core/top-up-api/: pom.xml
core/wallet/: pom.xml
core/wallet-api/: pom.xml
customer-service/: Dockerfile  docker-compose-infrastructure.yml  docker-compose.yml  jest.config.ts  package-lock.json  package.json
customer-service/__tests__/: routes.test.ts  testHelpers.ts
customer-service/src/: app.ts  models.ts  repository.ts  routes.ts
customer-service/src/__tests__/: routes.test.ts
doc/: payment-flow.puml  top-up-flow.puml
e2e-tests/: pyproject.toml
e2e-tests/client/: customer_service_client.py
e2e-tests/features/: test_wallet_topup.py  wallet-top-up.feature
e2e-tests/features/steps/: wallet-top-up.py
top-up-service/: pom.xml
top-up-service/top-up/: pom.xml
top-up-service/top-up-api/: pom.xml
top-up-service/top-up-app/: HELP.md  pom.xml
top-up-service/top-up-app/docker/: top-up-database.yml
wallet-service/: pom.xml
wallet-service/app/: pom.xml
wallet-service/wallet/: pom.xml
wallet-service/wallet-api/: pom.xml
(+216 files in other folders)
