[tool.poetry]
name = "payment-system-e2e-tests"
version = "0.1.0"
description = ""
authors = ["antessio <antessio7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest-bdd = "^7.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
